2009-01-13  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* ChangeLog: Clarified last ChangeLog entry (choice of GPL header).
	
	* libopenvas_hg/hg_utils.c: Replaced K&R function declarations,
	documentation.
	
2009-01-12  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	Added GPL header from host_gatherer.c to other constituent files of
	the host_gatherer library (referenced as "HostLoop2 library" in
	hg_add_host.c).
	
	* libopenvas_hg/hg_debug.c, libopenvas_hg/hg_filter.h,
	libopenvas_hg/test.c, libopenvas_hg/hg_utils.h,
	libopenvas_hg/hg_subnet.h, libopenvas_hg/hg_dns_axfr.h,
	libopenvas/hg_add_hosts.h : Added GPL header.

2009-01-12  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* libopenvas_hg/hg_filter.c: Replaced K&R function headers, transformed
	comments to javadoc style, removed some whitespaces.

2009-01-12  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* libopenvas_hg/hg_add_hosts.c (hg_add_comma_delimited_hosts):
	Reformatted.

2009-01-08  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* libopenvas/store.c (store_load_plugin): Fixed memory leaks. 

2009-01-04  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	Name change for cached ("description") files for NVTs.
	They used to have the suffix ".desc" instead of ".nasl"
	but they now have the very same name as the corresponding NVT
	plus additional suffix ".desc", e.g. "x.nasl" will be "x.nasl.desc".
	This also prevents that e.g. "x.nasl" and "x.nes" (or "x.oval")
	will overwrite each others' cache.

	It is recommendable to clean the .desc directory to
	avoid unnecessary old cache files.

	* libopenvas/store.c (store_plugin): Added doc string and
	now uses g_build_filename to assemble filenames instead
	of doing this on our own. Append ".desc" rather than replace
	a present suffix.
	(store_load_plugin): Updated doc string and now uses
	g_build_filename to assemble filenames instead
	of doing this on our own. Append ".desc" rather than replace
	a present suffix.